Fix mobile text overflow

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -70,14 +70,17 @@ header h2 {
 
 #content-wrapper {
   padding-top: 30px;
+  padding-bottom: 30px;
   border-top: dashed 1px #fff;
+  height: 100%;
+  width: 100%;
 }
 
 #main-content {
-  float: left;
-  width: 690px;
-  margin-left: 20px;
-  margin-right: 20px;
+  overflow: hidden;
+  max-width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #main-content img {
@@ -103,7 +106,6 @@ aside#sidebar {
   font-family: Schoolbell, 'Helvetica Neue', Helvetica, Arial, serif;
   float: left;
   padding: 0 20px 0 20px;
-  margin-right: 20px;
   line-height: 2.0;
   border-right: dashed 1px #aaa;
 }
@@ -213,6 +215,7 @@ form {
 /* GENERAL ELEMENT TYPE STYLES */
 
 #main-content h1 {
+  width: 80%;
   margin-top: 0;
   margin-bottom: 0;
   font-family: Schoolbell, 'Helvetica Neue', Helvetica, Arial, serif;
@@ -244,7 +247,7 @@ form {
 }
 
 #main-content h3 {
-  margin-top: 24px;
+  margin-top: 8px;
   margin-bottom: 8px;
   font-family: Schoolbell, 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 18px;
@@ -446,7 +449,6 @@ footer a:hover {
     display: inline;
     font-size: 13px;
   }
-  #main-content,
   aside#sidebar {
     float: none;
     width: 100% ! important;
